2001-10-02  Lauris Kaplinski  <lauris@ximian.com>

	* src/dyna-draw-context.c: Stroking by Mitsuru Oka

	* src/helper/bezier-utils.h: New file by Motsuru oka

	* src/helper/bezier-utils.c: Ditto

	* src/sp-shape.c (sp_shape_print): Translate gradients the right way

2001-10-01  Lauris Kaplinski  <lauris@ximian.com>

	* src/sp-shape.c (sp_shape_print): Use rule for clip and fill
	(sp_shape_paint): Use winding rule

2001-09-30  Lauris Kaplinski  <lauris@ximian.com>

	* src/style.c (sp_style_write_string): Write rule
	(sp_style_read_from_string): Parse rule

	* src/style.h: Made rule libart enum

	* src/display/path-archetype.c (sp_path_at): Search by rule
	(sp_path_at_new): Rewind with rule
	(sp_pat_equal): Compare rules

	* src/display/path-archetype.h: Added rule argument

	* src/display/cpath-component.c (sp_cpath_comp_new): Init rule
	(sp_cpath_comp_update): Use rule
	(sp_cpath_comp_change): Ditto

	* src/display/cpath-component.h: Added rule member

	* src/display/canvas-shape.c (sp_canvas_shape_update): Set fill rule

2001-09-29  Lauris Kaplinski  <lauris@ximian.com>

	* src/selection-chemistry.c (sp_selection_lower_to_bottom): Do not lower
	behind non-items (i.e. base <defs> object)
	(sp_selection_lower): Ditto

	* configure.in: Version 0.24.1

	* src/document.c (sp_document_new): Set xmlns:xlink
	(sp_document_new_from_mem): Ditto

	* src/sp-defs.c (sp_defs_destroy): Correct list emptying

	* src/dialogs/gradient-selector.c (sp_gradient_selector_add_vector_clicked): unref repr

	* src/gradient-chemistry.c (sp_object_ensure_fill_gradient_normalized): unref repr

	* src/helper/art-utils.c (art_rgb_run_rgba): Fix 255/256 bug

	* src/display/canvas-shape.c (sp_canvas_shape_render): Removed #ifdef 0 code

	* src/widgets/gradient-image.c (sp_gradient_image_expose): Draw grabage
	using fresh new nr functions
	(sp_gradient_image_update): Ditto (not used)

	* src/helper/nr-plain-stuff.h: New file

	* src/helper/nr-plain-stuff.c: New file
