@@ -1,3 +1,9 @@
+2001-10-02  Peter Moulder <pmoulder@csse.monash.edu.au>
+
+	* src/xml/repr-io.c (repr_quote_write): New method, quotes
+	special chars correctly for xml
+	(repr_write): Use repr_quote_write
+	
 2001-10-02  Lauris Kaplinski  <lauris@ximian.com>
 
 	* src/dyna-draw-context.c: Stroking by Mitsuru Oka
